doing lab still

--- a/programming/Lab1/Lab/Lab.vcxproj.filters
+++ b/programming/Lab1/Lab/Lab.vcxproj.filters
@@ -23,5 +23,8 @@
     <ClCompile Include="Trial.cpp">
       <Filter>Файлы исходного кода</Filter>
     </ClCompile>
+    <ClCompile Include="program.cpp">
+      <Filter>Файлы исходного кода</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
