--- a/programming/Lab1/Lab/Lab.vcxproj
+++ b/programming/Lab1/Lab/Lab.vcxproj
@@ -149,6 +149,7 @@
     <ClInclude Include="Trial.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="program.cpp" />
     <ClCompile Include="Trial.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
