--- a/programming/Lab4/lab/lab.vcxproj
+++ b/programming/Lab4/lab/lab.vcxproj
@@ -141,6 +141,7 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="event.h" />
     <ClInclude Include="group.h" />
     <ClInclude Include="objects.h" />
     <ClInclude Include="resource.h" />
@@ -152,6 +153,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AssemblyInfo.cpp" />
+    <ClCompile Include="event.cpp" />
     <ClCompile Include="group.cpp" />
     <ClCompile Include="lab.cpp" />
     <ClCompile Include="objects.cpp" />
