--- a/programming/Lab5/lab/lab/lab.vcxproj
+++ b/programming/Lab5/lab/lab/lab.vcxproj
@@ -111,12 +111,14 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="event.cpp" />
+    <ClCompile Include="group.cpp" />
     <ClCompile Include="list.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="menu.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="event.h" />
+    <ClInclude Include="group.h" />
     <ClInclude Include="list.h" />
     <ClInclude Include="menu.h" />
   </ItemGroup>
