--- a/programming/Lab5/lab/lab/lab.vcxproj.filters
+++ b/programming/Lab5/lab/lab/lab.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="menu.cpp">
       <Filter>Файлы исходного кода</Filter>
     </ClCompile>
+    <ClCompile Include="group.cpp">
+      <Filter>Файлы исходного кода</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="list.h">
@@ -36,6 +39,9 @@
       <Filter>Заголовочные файлы</Filter>
     </ClInclude>
     <ClInclude Include="menu.h">
+      <Filter>Заголовочные файлы</Filter>
+    </ClInclude>
+    <ClInclude Include="group.h">
       <Filter>Заголовочные файлы</Filter>
     </ClInclude>
   </ItemGroup>
