--- a/programming/Lab5/lab/lab/lab.vcxproj
+++ b/programming/Lab5/lab/lab/lab.vcxproj
@@ -111,6 +111,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="event.cpp" />
+    <ClCompile Include="exception.cpp" />
     <ClCompile Include="group.cpp" />
     <ClCompile Include="list.cpp" />
     <ClCompile Include="main.cpp" />
@@ -118,6 +119,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="event.h" />
+    <ClInclude Include="exception.h" />
     <ClInclude Include="group.h" />
     <ClInclude Include="list.h" />
     <ClInclude Include="menu.h" />
