--- a/programming/Lab6/Lab/Lab/Lab.vcxproj.filters
+++ b/programming/Lab6/Lab/Lab/Lab.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="lab.cpp">
       <Filter>Файлы исходного кода</Filter>
     </ClCompile>
+    <ClCompile Include="set.cpp">
+      <Filter>Файлы исходного кода</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="set.h">
+      <Filter>Заголовочные файлы</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
