done usre class template

--- a/programming/Lab6/Lab/Lab/Lab.vcxproj
+++ b/programming/Lab6/Lab/Lab/Lab.vcxproj
@@ -112,9 +112,11 @@
   <ItemGroup>
     <ClCompile Include="lab.cpp" />
     <ClCompile Include="set.cpp" />
+    <ClCompile Include="user.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="set.h" />
+    <ClInclude Include="user.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
