--- a/programming/Lab6/Lab/Lab/Lab.vcxproj.filters
+++ b/programming/Lab6/Lab/Lab/Lab.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="exception.cpp">
       <Filter>Файлы исходного кода</Filter>
     </ClCompile>
+    <ClCompile Include="debug.cpp">
+      <Filter>Файлы исходного кода</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="set.h">
@@ -48,6 +51,9 @@
       <Filter>Заголовочные файлы</Filter>
     </ClInclude>
     <ClInclude Include="exception.h">
+      <Filter>Заголовочные файлы</Filter>
+    </ClInclude>
+    <ClInclude Include="debug.h">
       <Filter>Заголовочные файлы</Filter>
     </ClInclude>
   </ItemGroup>
