--- a/programming/Lab7/Lab/Lab/Lab.vcxproj
+++ b/programming/Lab7/Lab/Lab/Lab.vcxproj
@@ -111,6 +111,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="lab.cpp" />
+    <ClCompile Include="stl.cpp" />
     <ClCompile Include="user.cpp" />
   </ItemGroup>
   <ItemGroup>
