--- a/programming/Lab7/Lab/Lab/Lab.vcxproj.filters
+++ b/programming/Lab7/Lab/Lab/Lab.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="user.cpp">
       <Filter>Файлы исходного кода</Filter>
     </ClCompile>
+    <ClCompile Include="stl.cpp">
+      <Filter>Файлы исходного кода</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="user.h">
